The Steam Controller is complete, but the GOG Controller needs an inaccessible api key.

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -17,7 +17,7 @@
         </Authorized>
         <NotAuthorized>
             <p>
-                <h5>BirdEyes is a tool allowing gamers to track videogames, courtesy of the IGDB API with Kamran Ayub's wrapper, the Steam Web API with Justin Skiles' wrapper, and the Galaxy of Games API with NicoVIII's wrapper. It is also an IB student's ITGS IA. </h5>
+                <h5>BirdEyes is ______________. It is also an IB student's ITGS IA. </h5>
             </p>
             <p>
                 <h5>You may browse without logging in, but the purpose of the app is to allow for the tracking of applications for when they drop below a set price, for example during sales. </h5>
