--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -7,20 +7,20 @@
 <h2><strong>BirdEyes: </strong>Welcome to all of your game purchasing solutions! </h2>
 
 
-
+<br />
 <div>
     <AuthorizeView>
         <Authorized>
             <p>
-                <h5>Welcome back! </h5> <!--Need to add tracking reminders on Authorized View of home page, otherwise remember to fill the negative space with something else --> 
+                <h4>Welcome back! </h4> <!--Need to add tracking reminders on Authorized View of home page, otherwise remember to fill the negative space with something else --> 
             </p>
         </Authorized>
         <NotAuthorized>
             <p>
-                <h5>BirdEyes is ______________. It is also an IB student's ITGS IA. </h5>
+                <h4>BirdEyes is a WebApp which takes data form the IsThereAnyDeal.com API to redisplay it in a more easily readable hence queryable format. It is also an IB student's ITGS IA. </h4>
             </p>
             <p>
-                <h5>You may browse without logging in, but the purpose of the app is to allow for the tracking of applications for when they drop below a set price, for example during sales. </h5>
+                <h4>You may browse without logging in. Apps, expansions, and bundles may be tracked on IsThereAnyDeal.com. </h4>
             </p>
         </NotAuthorized>
     </AuthorizeView>
