--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -19,6 +19,11 @@
                 <span class="oi oi-star" aria-hidden="true"></span> Browse Games
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="https://isthereanydeal.com/">
+                <span class="oi oi-star" aria-hidden="true"></span> IsThereAnyDeal.com
+            </NavLink>
+        </div>
     </nav>
 </div>
 
