--- a/Client/Pages/Browse.razor
+++ b/Client/Pages/Browse.razor
@@ -38,7 +38,7 @@
 			@for (int i = 0; i<allGames.Count(); i++) 
 			{
 				var game = allGames[i];
-				<td>@game.Title</td>
+				<td><span href="https://isthereanydeal.com/">@game.Title</span></td>
 
 				<td>@game.Shop</td>
 
@@ -60,8 +60,8 @@
 
 @code {
 	private Input BrowseInput = new Input();
-	List<Application> allGames = new();
 
+	List<Application> allGames = new();
 	protected override async Task OnInitializedAsync()
 	{
 		ITADService serviceInstance = new(new HttpClient());
