--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -21,7 +21,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://isthereanydeal.com/">
-                <span class="oi oi-star" aria-hidden="true"></span> IsThereAnyDeal.com
+                <span class="oi oi-star" aria-hidden="true"></span> ITAD
             </NavLink>
         </div>
     </nav>
