--- a/Client/Shared/MainLayout.razor.css
+++ b/Client/Shared/MainLayout.razor.css
@@ -6,14 +6,15 @@
 
 main {
     flex: 1;
+    background-color: #bfbfbf;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(5, 39, 103) 20%, #31664e 60%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    background-color: rgb(5, 39, 103);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
